--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,41 +1,29 @@
-[package]
-name = "example-exex-remote"
+[workspace]
+members = [
+  "remote",
+]
+resolver = "2"
+
+[workspace.package]
 version = "0.1.0"
 edition = "2021"
 rust-version = "1.79"
 license = "MIT OR Apache-2.0"
 publish = false
 
-[dependencies]
+[workspace.dependencies]
+# reth
 reth = { git = "https://github.com/paradigmxyz/reth" }
 reth-exex = { git = "https://github.com/paradigmxyz/reth", features = ["serde"] }
 reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
 reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
 reth-tracing = { git = "https://github.com/paradigmxyz/reth" }
 
+# async
+tokio = { version = "1.0", features = ["full"] }
+
+# misc
 eyre = "0.6"
 
-tonic = "0.11"
-prost = "0.12"
-tokio = { version = "1.0", features = ["full"] }
-tokio-stream = "0.1"
-
-bincode = "1.3"
-
-[build-dependencies]
-tonic-build = "0.11"
-
-[dev-dependencies]
+# testing
 reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth" }
-
-tokio = "1"
-
-[features]
-default = []
-optimism = ["reth/optimism"]
-
-[[example]]
-name = "exex"
-
-[[example]]
-name = "consumer"
