--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ members = [
   "op-bridge",
   "remote",
   "rollup",
+  "wasm",
+  "wasm/wasm_exex"
 ]
 resolver = "2"
 
@@ -18,19 +20,20 @@ publish = false
 
 [workspace.dependencies]
 # reth
-reth = { git = "https://github.com/paradigmxyz/reth" }
-reth-chainspec = { git = "https://github.com/paradigmxyz/reth" }
-reth-discv5 = { git = "https://github.com/paradigmxyz/reth" }
-reth-execution-errors = { git = "https://github.com/paradigmxyz/reth" }
-reth-execution-types = { git = "https://github.com/paradigmxyz/reth" }
-reth-exex = { git = "https://github.com/paradigmxyz/reth", features = ["serde"] }
-reth-network-peers = { git = "https://github.com/paradigmxyz/reth" }
-reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
-reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth" }
-reth-provider = { git = "https://github.com/paradigmxyz/reth" }
-reth-revm = { git = "https://github.com/paradigmxyz/reth" }
-reth-tracing = { git = "https://github.com/paradigmxyz/reth" }
+reth = { git = "https://github.com/paradigmxyz/reth", branch = "alexey/prune-mode-overflow" }
+reth-chainspec = { git = "https://github.com/paradigmxyz/reth", branch = "alexey/prune-mode-overflow" }
+reth-discv5 = { git = "https://github.com/paradigmxyz/reth", branch = "alexey/prune-mode-overflow" }
+reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", branch = "alexey/prune-mode-overflow" }
+reth-execution-types = { git = "https://github.com/paradigmxyz/reth", branch = "alexey/prune-mode-overflow" }
+reth-exex = { git = "https://github.com/paradigmxyz/reth", features = ["serde"], branch = "alexey/prune-mode-overflow" }
+reth-exex-types = { git = "https://github.com/paradigmxyz/reth", branch = "alexey/prune-mode-overflow" }
+reth-network-peers = { git = "https://github.com/paradigmxyz/reth", branch = "alexey/prune-mode-overflow" }
+reth-node-api = { git = "https://github.com/paradigmxyz/reth", branch = "alexey/prune-mode-overflow" }
+reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", branch = "alexey/prune-mode-overflow" }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "alexey/prune-mode-overflow" }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", branch = "alexey/prune-mode-overflow" }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", branch = "alexey/prune-mode-overflow" }
+reth-tracing = { git = "https://github.com/paradigmxyz/reth", branch = "alexey/prune-mode-overflow" }
 
 # alloy
 alloy-sol-types = { version = "0.7", features = ["json"] }
