--- a/kona/Cargo.toml
+++ b/kona/Cargo.toml
@@ -6,6 +6,12 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+# kona
+kona-derive = { git = "https://github.com/ethereum-optimism/kona", branch = "main", features = ["online", "serde"] }
+
+# needed for compatibility with kona's ChainProvider trait
+anyhow = { version = "1.0.86", default-features = false }
+
 # reth
 reth.workspace = true
 reth-exex.workspace = true
@@ -25,12 +31,9 @@ async-trait = "0.1.81"
 url = "2.5.2"
 reqwest = "0.12.5"
 serde_json = "1.0.120"
+parking_lot = "0.12.3"
 eyre.workspace = true
 tokio.workspace = true
-
-# kona
-anyhow = { version = "1.0.86", default-features = false }
-kona-derive = { git = "https://github.com/ethereum-optimism/kona", branch = "main", features = ["online", "serde"] }
 
 [dev-dependencies]
 reth-exex-test-utils.workspace = true
