feat(backfill): start via CLI arguments (#11)
* feat(backfill): start via CLI arguments

* make a fn sync

* fix higher-ranked lifetime error

* Revert "make a fn sync"

This reverts commit 24fe6ccf26cc1b0752ab96485c3aef5a5cc33e8f.

* fix docs

* remove async from processs committed chain fn

* move block_on higher

--- a/backfill/Cargo.toml
+++ b/backfill/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 
 [dependencies]
 # reth
+reth-evm.workspace = true
 reth-execution-types.workspace = true
 reth-exex.workspace = true
 reth-node-api.workspace = true
@@ -22,6 +23,9 @@ tokio.workspace = true
 # rpc
 async-trait = "0.1"
 jsonrpsee = { version = "0.23", features = ["server", "macros"] }
+
+# cli
+clap = "4"
 
 # misc
 tracing = "0.1"
