--- a/kona/Cargo.toml
+++ b/kona/Cargo.toml
@@ -9,6 +9,9 @@ license.workspace = true
 # kona
 kona-derive = { git = "https://github.com/ethereum-optimism/kona", branch = "main", features = ["online", "serde"] }
 
+# TODO: add after https://github.com/ethereum-optimism/kona/pull/393
+# superchain-registry = { version = "0.2.2", default-features = false }
+
 # needed for compatibility with kona's ChainProvider trait
 anyhow = { version = "1.0.86", default-features = false }
 
