--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,20 +19,19 @@ publish = false
 
 [workspace.dependencies]
 # reth
-reth = { git = "https://github.com/paradigmxyz/reth" }
-reth-chainspec = { git = "https://github.com/paradigmxyz/reth" }
-reth-discv5 = { git = "https://github.com/paradigmxyz/reth" }
-reth-evm = { git = "https://github.com/paradigmxyz/reth" }
-reth-execution-errors = { git = "https://github.com/paradigmxyz/reth" }
-reth-execution-types = { git = "https://github.com/paradigmxyz/reth" }
-reth-exex = { git = "https://github.com/paradigmxyz/reth", features = ["serde"] }
-reth-network-peers = { git = "https://github.com/paradigmxyz/reth" }
-reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
-reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth" }
-reth-provider = { git = "https://github.com/paradigmxyz/reth" }
-reth-revm = { git = "https://github.com/paradigmxyz/reth" }
-reth-tracing = { git = "https://github.com/paradigmxyz/reth" }
+reth = { git = "https://github.com/paradigmxyz/reth", version = "1.0.3" }
+reth-chainspec = { git = "https://github.com/paradigmxyz/reth", version = "1.0.3" }
+reth-discv5 = { git = "https://github.com/paradigmxyz/reth", version = "1.0.3" }
+reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", version = "1.0.3" }
+reth-execution-types = { git = "https://github.com/paradigmxyz/reth", version = "1.0.3" }
+reth-exex = { git = "https://github.com/paradigmxyz/reth", features = ["serde"], version = "1.0.3" }
+reth-network-peers = { git = "https://github.com/paradigmxyz/reth", version = "1.0.3" }
+reth-node-api = { git = "https://github.com/paradigmxyz/reth", version = "1.0.3" }
+reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", version = "1.0.3" }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.0.3" }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", version = "1.0.3" }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", version = "1.0.3" }
+reth-tracing = { git = "https://github.com/paradigmxyz/reth", version = "1.0.3" }
 
 # alloy
 alloy-sol-types = { version = "0.7", features = ["json"] }
