--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,52 +1,34 @@
-[workspace]
-members = [
-  "discv5",
-  "in-memory-state",
-  "minimal",
-  "op-bridge",
-  "remote",
-  "rollup",
-  "wasm",
-  "wasm/wasm_exex"
-]
-resolver = "2"
-
-[workspace.package]
-version = "0.1.0"
-edition = "2021"
-rust-version = "1.79"
-license = "MIT OR Apache-2.0"
+[package]
+name = "wasm"
+version = "0.0.0"
 publish = false
+edition = "2021"
+license = "MIT OR Apache-2.0"
 
-[workspace.dependencies]
+[dependencies]
 # reth
-reth = { git = "https://github.com/paradigmxyz/reth" }
-reth-chainspec = { git = "https://github.com/paradigmxyz/reth" }
-reth-discv5 = { git = "https://github.com/paradigmxyz/reth" }
-reth-execution-errors = { git = "https://github.com/paradigmxyz/reth" }
-reth-execution-types = { git = "https://github.com/paradigmxyz/reth" }
-reth-exex = { git = "https://github.com/paradigmxyz/reth", features = ["serde"] }
 reth-exex-types = { git = "https://github.com/paradigmxyz/reth" }
-reth-network-peers = { git = "https://github.com/paradigmxyz/reth" }
+reth-exex = { git = "https://github.com/paradigmxyz/reth", features = [
+    "serde",
+] }
 reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
 reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth" }
-reth-provider = { git = "https://github.com/paradigmxyz/reth" }
-reth-revm = { git = "https://github.com/paradigmxyz/reth" }
 reth-tracing = { git = "https://github.com/paradigmxyz/reth" }
-
-# alloy
-alloy-sol-types = { version = "0.7", features = ["json"] }
+reth = { git = "https://github.com/paradigmxyz/reth" }
 
 # async
+async-trait = "0.1"
 futures = "0.3"
-futures-util = "0.3"
 tokio = { version = "1.0", features = ["full"] }
-tokio-stream = "0.1"
+
+# wasm
+wasi-common = "22"
+wasmtime = "22"
 
 # misc
 eyre = "0.6"
+jsonrpsee = { version = "0.23", features = ["server", "macros"] }
+serde_json = "1"
 
-# testing
+[dev-dependencies]
 reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth" }
-reth-testing-utils = { git = "https://github.com/paradigmxyz/reth" }
