--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,17 @@
-[package]
-name = "wasm"
+[workspace]
+members = ["wasm_exex"]
+
+[workspace.package]
 version = "0.0.0"
 publish = false
 edition = "2021"
 license = "MIT OR Apache-2.0"
 
-[dependencies]
+[workspace.dependencies]
 # reth
 reth-exex-types = { git = "https://github.com/paradigmxyz/reth" }
 reth-exex = { git = "https://github.com/paradigmxyz/reth", features = [
-    "serde",
+	"serde",
 ] }
 reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
 reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
@@ -29,6 +31,37 @@ wasmtime = "22"
 eyre = "0.6"
 jsonrpsee = { version = "0.23", features = ["server", "macros"] }
 serde_json = "1"
+
+[package]
+name = "wasm"
+version.workspace = true
+publish.workspace = true
+edition.workspace = true
+license.workspace = true
+
+[dependencies]
+# reth
+reth-exex-types.workspace = true
+reth-exex.workspace = true
+reth-node-api.workspace = true
+reth-node-ethereum.workspace = true
+reth-tracing.workspace = true
+reth.workspace = true
+
+# async
+async-trait.workspace = true
+futures.workspace = true
+tokio.workspace = true
+
+# wasm
+wasi-common.workspace = true
+wasmtime.workspace = true
+
+# misc
+eyre.workspace = true
+jsonrpsee.workspace = true
+serde_json.workspace = true
+
 
 [dev-dependencies]
 reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth" }
