--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ wasmtime = "22"
 eyre = "0.6"
 jsonrpsee = { version = "0.23", features = ["server", "macros"] }
 serde_json = "1"
+base64 = "0.22.1"
 
 [package]
 name = "wasm"
@@ -61,6 +62,7 @@ wasmtime.workspace = true
 eyre.workspace = true
 jsonrpsee.workspace = true
 serde_json.workspace = true
+base64.workspace = true
 
 
 [dev-dependencies]
