--- a/wasm_send/Cargo.toml
+++ b/wasm_send/Cargo.toml
@@ -8,6 +8,6 @@ license.workspace = true
 [dependencies]
 base64.workspace = true
 eyre.workspace = true
-reqwest = "0.12.5"
+reqwest = { version = "0.12.5", features = ["json"] }
 serde_json.workspace = true
 tokio.workspace = true
