--- a/kona/Cargo.toml
+++ b/kona/Cargo.toml
@@ -34,6 +34,7 @@ reqwest = "0.12.5"
 serde_json = "1.0.120"
 parking_lot = "0.12.3"
 eyre.workspace = true
+lazy_static = "1.5.0"
 
 [dev-dependencies]
 reth-exex-test-utils.workspace = true
