--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ publish = false
 
 [workspace.dependencies]
 # reth
-reth = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4" }
+reth = { git = "https://github.com/paradigmxyz/reth", features = ["optimism"], version = "1.0.4" }
 reth-chainspec = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4" }
 reth-discv5 = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4" }
 reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4" }
