--- a/daimo-names/Cargo.toml
+++ b/daimo-names/Cargo.toml
@@ -17,7 +17,7 @@ reth-tracing.workspace = true
 eyre.workspace = true
 futures.workspace = true
 alloy-sol-types.workspace = true
-rusqlite = { version = "0.31.0", features = ["bundled"] }
+tokio-postgres = "0.7.11"
 
 [dev-dependencies]
 reth-exex-test-utils.workspace = true
