--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ members = [
   "discv5",
   "in-memory-state",
   "minimal",
-  "op-bridge",
+  "oracle",
+  "op-bridge", 
   "remote",
   "rollup",
 ]
