--- a/oracle/Cargo.toml
+++ b/oracle/Cargo.toml
@@ -9,13 +9,18 @@ publish.workspace = true
 [dependencies]
 
 # reth
-reth-node-ethereum.workspace = true
-reth.workspace = true
-reth-tracing.workspace = true
-reth-network-peers.workspace = true
 reth-discv5.workspace = true
+reth-eth-wire.workspace = true
 reth-exex.workspace = true
+reth-network-api.workspace = true
+reth-network-peers.workspace = true
+reth-network.workspace = true
 reth-node-api.workspace = true
+reth-node-ethereum.workspace = true
+reth-primitives.workspace = true
+reth-rpc-types.workspace = true
+reth-tracing.workspace = true
+reth.workspace = true
 
 # networking
 discv5 = "0.6"
@@ -24,6 +29,7 @@ enr = "0.12"
 # async
 futures.workspace = true
 tokio.workspace = true
+tokio-stream.workspace = true
 
 # misc
 clap = "4" 
