--- a/rollup/Cargo.toml
+++ b/rollup/Cargo.toml
@@ -20,16 +20,17 @@ reth-tracing.workspace = true
 reth.workspace = true
 
 # alloy
-alloy-consensus = { version = "0.2", features = ["kzg"] }
+alloy-consensus = { version = "0.3", features = ["kzg"] }
 alloy-rlp = "0.3"
 alloy-sol-types.workspace = true
 
 # async
+futures-util.workspace = true
 tokio.workspace = true
 
 # misc
 eyre.workspace = true
-foundry-blob-explorers = "0.5"
+foundry-blob-explorers = "0.7"
 once_cell = "1"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 serde_json = "1"
