--- a/oracle/Cargo.toml
+++ b/oracle/Cargo.toml
@@ -22,6 +22,10 @@ reth-rpc-types.workspace = true
 reth-tracing.workspace = true
 reth.workspace = true
 
+alloy-signer-local = "0.3"
+alloy-signer = "0.3"
+alloy-rlp = "0.3"
+
 # networking
 discv5 = "0.7"
 enr = "0.12"
