--- a/backfill/Cargo.toml
+++ b/backfill/Cargo.toml
@@ -15,6 +15,9 @@ reth-node-ethereum.workspace = true
 reth-tracing.workspace = true
 reth.workspace = true
 
+# alloy
+alloy-primitives.workspace = true
+
 # async
 eyre.workspace = true
 futures.workspace = true
