--- a/minimal/Cargo.toml
+++ b/minimal/Cargo.toml
@@ -15,6 +15,7 @@ reth-execution-types.workspace = true
 
 eyre.workspace = true
 futures.workspace = true
+serde_json.workspace = true
 
 [dev-dependencies]
 reth-exex-test-utils.workspace = true
