--- a/oracle/Cargo.toml
+++ b/oracle/Cargo.toml
@@ -18,13 +18,13 @@ reth-network.workspace = true
 reth-node-api.workspace = true
 reth-node-ethereum.workspace = true
 reth-primitives.workspace = true
-reth-rpc-types.workspace = true
 reth-tracing.workspace = true
 reth.workspace = true
 
 alloy-signer-local.workspace = true
 alloy-signer.workspace = true
 alloy-rlp.workspace = true
+alloy-rpc-types.workspace = true
 
 # networking
 discv5 = "0.7"
