--- a/oracle/Cargo.toml
+++ b/oracle/Cargo.toml
@@ -36,13 +36,15 @@ futures.workspace = true
 tokio-stream.workspace = true
 tokio-tungstenite = "0.23"
 tokio.workspace = true
+rand = "0.8.5"
+
+thiserror = "1"
 
 # misc
 clap = "4" 
 eyre.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-thiserror = "1"
 uuid = "1.10.0"
 
 [dev-dependencies]
