--- a/oracle/Cargo.toml
+++ b/oracle/Cargo.toml
@@ -7,7 +7,6 @@ license.workspace = true
 publish.workspace = true
 
 [dependencies]
-
 # reth
 reth-discv5.workspace = true
 reth-eth-wire.workspace = true
@@ -21,10 +20,12 @@ reth-primitives.workspace = true
 reth-tracing.workspace = true
 reth.workspace = true
 
-alloy-signer-local.workspace = true
-alloy-signer.workspace = true
+# alloy
+alloy-primitives.workspace = true
 alloy-rlp.workspace = true
 alloy-rpc-types.workspace = true
+alloy-signer-local.workspace = true
+alloy-signer.workspace = true
 
 # networking
 discv5 = "0.7"
@@ -32,19 +33,18 @@ enr = "0.12"
 
 # async
 futures.workspace = true
-tokio.workspace = true
 tokio-stream.workspace = true
 tokio-tungstenite = "0.23"
-
-
-thiserror = "1"
+tokio.workspace = true
 
 # misc
 clap = "4" 
 eyre.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+thiserror = "1"
 uuid = "1.10.0"
 
+[dev-dependencies]
 reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth" }
 reth-testing-utils = { git = "https://github.com/paradigmxyz/reth" }
