--- a/op-bridge/Cargo.toml
+++ b/op-bridge/Cargo.toml
@@ -6,22 +6,32 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-reth.workspace = true
+# reth
+reth-execution-types.workspace = true
 reth-exex.workspace = true
 reth-node-api.workspace = true
 reth-node-ethereum.workspace = true
 reth-primitives.workspace = true
-reth-execution-types.workspace = true
 reth-tracing.workspace = true
+reth.workspace = true
 
+# alloy
+alloy-primitives.workspace = true
+alloy-sol-types.workspace = true
+
+# misc
 eyre.workspace = true
 futures.workspace = true
-alloy-sol-types.workspace = true
 rusqlite = { version = "0.31.0", features = ["bundled"] }
+tokio.workspace = true
 
 [dev-dependencies]
+# reth
 reth-exex-test-utils.workspace = true
 reth-testing-utils.workspace = true
+
+# alloy
+alloy-consensus.workspace = true
 
 tokio.workspace = true
 rand = "0.8"
