--- a/discv5/Cargo.toml
+++ b/discv5/Cargo.toml
@@ -18,7 +18,7 @@ reth-tracing.workspace = true
 reth.workspace = true
 
 # networking
-discv5 = "0.7"
+discv5.workspace = true
 enr = "0.12"
 
 # async
