--- a/oracle/Cargo.toml
+++ b/oracle/Cargo.toml
@@ -19,6 +19,7 @@ reth-node-ethereum.workspace = true
 reth-primitives.workspace = true
 reth-tracing.workspace = true
 reth.workspace = true
+reth-tokio-util = { git = "https://github.com/paradigmxyz/reth" }
 
 # alloy
 alloy-primitives.workspace = true
