--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ futures = "0.3"
 futures-util = "0.3"
 tokio = { version = "1.0", features = ["full"] }
 tokio-stream = "0.1"
+tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
 
 # serde
 serde = "1"
