--- a/in-memory-state/Cargo.toml
+++ b/in-memory-state/Cargo.toml
@@ -13,6 +13,7 @@ reth-node-ethereum.workspace = true
 reth-tracing.workspace = true
 reth-execution-types.workspace = true
 
+alloy-consensus.workspace = true
 eyre.workspace = true
 futures-util.workspace = true
 
