--- a/op-bridge/Cargo.toml
+++ b/op-bridge/Cargo.toml
@@ -14,6 +14,7 @@ reth-node-ethereum.workspace = true
 reth-primitives.workspace = true
 reth-tracing.workspace = true
 reth.workspace = true
+reth-evm.workspace = true
 
 # alloy
 alloy-primitives.workspace = true
@@ -30,6 +31,7 @@ tokio.workspace = true
 # reth
 reth-exex-test-utils.workspace = true
 reth-testing-utils.workspace = true
+alloy-primitives = { workspace = true, features = ["rand"]}
 
 # alloy
 alloy-consensus.workspace = true
