--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,45 +20,52 @@ publish = false
 
 [workspace.dependencies]
 # reth
-reth = { git = "https://github.com/paradigmxyz/reth" }
-reth-chainspec = { git = "https://github.com/paradigmxyz/reth" }
-reth-discv5 = { git = "https://github.com/paradigmxyz/reth" }
-reth-execution-errors = { git = "https://github.com/paradigmxyz/reth" }
-reth-execution-types = { git = "https://github.com/paradigmxyz/reth" }
-reth-exex = { git = "https://github.com/paradigmxyz/reth", features = ["serde"] }
-reth-eth-wire = { git = "https://github.com/paradigmxyz/reth" }
-reth-evm = { git = "https://github.com/paradigmxyz/reth" }
-reth-network = { git = "https://github.com/paradigmxyz/reth", features = ["test-utils"] }
-reth-network-api = { git = "https://github.com/paradigmxyz/reth" }
-reth-network-peers = { git = "https://github.com/paradigmxyz/reth" }
-reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
-reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth" }
-reth-provider = { git = "https://github.com/paradigmxyz/reth" }
-reth-revm = { git = "https://github.com/paradigmxyz/reth" }
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth" }
-reth-tracing = { git = "https://github.com/paradigmxyz/reth" }
+reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-discv5 = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3", features = ["serde"] }
+reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3", features = ["test-utils"] }
+reth-network-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
 
 # alloy
-alloy-eips = { version = "0.5.4", default-features = false }
-alloy-consensus = { version = "0.5.4", default-features = false }
-alloy-primitives = { version = "0.8.9", default-features = false }
+alloy-eips = { version = "0.7", default-features = false }
+alloy-genesis = { version = "0.7", default-features = false }
+alloy-consensus = { version = "0.7", default-features = false }
 alloy-rlp = "0.3.4"
-alloy-rpc-types = { version = "0.5.4", features = [
+alloy-rpc-types = { version = "0.7", features = [
     "eth",
 ], default-features = false }
-alloy-signer = { version = "0.5.4", default-features = false }
-alloy-signer-local = { version = "0.5.4", default-features = false }
+alloy-signer = { version = "0.7", default-features = false }
+alloy-signer-local = { version = "0.7", default-features = false }
+
+alloy-primitives = { version = "0.8", default-features = false }
 alloy-sol-types  = { version = "0.8", features = ["json"] }
 
 discv5 = "0.8"
+enr = "0.12.1"
+secp256k1 = { version = "0.29", default-features = false, features = [
+ "global-context",
+ "recovery",
+] }
 
 # async
 futures = "0.3"
 futures-util = "0.3"
 tokio = { version = "1.0", features = ["full"] }
 tokio-stream = "0.1"
-tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
+tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
 
 # serde
 serde = "1"
@@ -68,5 +75,5 @@ serde_json = "1"
 eyre = "0.6"
 
 # testing
-reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth" }
-reth-testing-utils = { git = "https://github.com/paradigmxyz/reth" }
+reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
+reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.3" }
