--- a/op-bridge/Cargo.toml
+++ b/op-bridge/Cargo.toml
@@ -14,6 +14,7 @@ reth-node-ethereum.workspace = true
 reth-primitives.workspace = true
 reth-tracing.workspace = true
 reth.workspace = true
+reth-evm.workspace = true
 
 # alloy
 alloy-primitives.workspace = true
@@ -23,13 +24,14 @@ alloy-eips.workspace = true
 # misc
 eyre.workspace = true
 futures.workspace = true
-rusqlite = { version = "0.31.0", features = ["bundled"] }
+rusqlite = { version = "0.32", features = ["bundled"] }
 tokio.workspace = true
 
 [dev-dependencies]
 # reth
 reth-exex-test-utils.workspace = true
 reth-testing-utils.workspace = true
+alloy-primitives = { workspace = true, features = ["rand"]}
 
 # alloy
 alloy-consensus.workspace = true
