--- a/rollup/Cargo.toml
+++ b/rollup/Cargo.toml
@@ -22,7 +22,7 @@ reth.workspace = true
 # alloy
 alloy-consensus = { workspace = true, features = ["k256"] }
 alloy-eips.workspace = true
-alloy-genesis = "0.5.4"
+alloy-genesis.workspace = true
 alloy-primitives.workspace = true
 alloy-rlp.workspace = true
 alloy-sol-types.workspace = true
@@ -33,12 +33,12 @@ tokio.workspace = true
 
 # misc
 eyre.workspace = true
-foundry-blob-explorers = "0.7"
+foundry-blob-explorers = "0.10"
 once_cell = "1"
-rusqlite = { version = "0.31.0", features = ["bundled"] }
+rusqlite = { version = "0.32", features = ["bundled"] }
 serde_json = "1"
 
 [dev-dependencies]
 reth-testing-utils.workspace = true
-secp256k1 = "0.29"
+secp256k1.workspace = true
 reth-transaction-pool = { workspace = true, features = ["test-utils"] }
