--- a/op-bridge/Cargo.toml
+++ b/op-bridge/Cargo.toml
@@ -13,7 +13,7 @@ reth-node-api.workspace = true
 reth-node-ethereum.workspace = true
 reth-primitives.workspace = true
 reth-tracing.workspace = true
-reth.workspace = true
+reth-ethereum.workspace = true
 reth-evm.workspace = true
 
 # alloy
