--- a/discv5/Cargo.toml
+++ b/discv5/Cargo.toml
@@ -15,7 +15,7 @@ reth-network-peers.workspace = true
 reth-node-api.workspace = true
 reth-node-ethereum.workspace = true
 reth-tracing.workspace = true
-reth.workspace = true
+reth-ethereum.workspace = true
 
 # networking
 discv5.workspace = true
