--- a/oracle/Cargo.toml
+++ b/oracle/Cargo.toml
@@ -18,7 +18,7 @@ reth-node-api.workspace = true
 reth-node-ethereum.workspace = true
 reth-primitives.workspace = true
 reth-tracing.workspace = true
-reth.workspace = true
+reth-ethereum.workspace = true
 
 # alloy
 alloy-primitives = { workspace = true, features = ["rlp"] }
