--- a/remote/Cargo.toml
+++ b/remote/Cargo.toml
@@ -12,7 +12,7 @@ reth-exex.workspace = true
 reth-node-api.workspace = true
 reth-node-ethereum.workspace = true
 reth-tracing.workspace = true
-reth.workspace = true
+reth-ethereum.workspace = true
 
 # alloy
 alloy-consensus.workspace = true
