--- a/op-bridge/Cargo.toml
+++ b/op-bridge/Cargo.toml
@@ -37,5 +37,5 @@ alloy-primitives = { workspace = true, features = ["rand"]}
 alloy-consensus.workspace = true
 
 tokio.workspace = true
-rand = "0.8"
+rand.workspace = true
 tempfile = "3"
